--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc.csproj
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc.csproj
@@ -109,6 +109,9 @@
     <Content Include="haarcascade_frontalface_default.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="landscape.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="lena.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
