Création d'une classe rien que pour OpenCV.

--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc.csproj
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc.csproj
@@ -88,6 +88,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="EmotionApi.cs" />
+    <Compile Include="FacesDetection.cs" />
     <Compile Include="Webcam.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
