Implementation de la classe WeatherApi qui consulte la météo - en cours.

--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc.csproj
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc.csproj
@@ -89,6 +89,7 @@
     </ApplicationDefinition>
     <Compile Include="EmotionApi.cs" />
     <Compile Include="FacesDetection.cs" />
+    <Compile Include="WeatherApi.cs" />
     <Compile Include="Webcam.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
